# STM32F767_Fire

./: .gitignore  0_readme.txt
0_template_project_fire/: CMakeLists.txt
0_template_project_fire/Doc/: 12_LED.txt  Doc_readme.txt
0_template_project_fire/Libraries/: Libraries_readme.txt
0_template_project_fire/Libraries/STM32F7xx_HAL_Driver/: STM32F7xx_HAL_Driver_readme.txt
0_template_project_fire/Listing/: Listing_readme.txt
0_template_project_fire/Output/: Output_readme.txt  aa.hex
0_template_project_fire/Project_BSP/: Project_readme.txt  bsp_led.c  bsp_led.h
0_template_project_fire/User/: User_readme.txt  main.c
F7_HAL_Lib_Project/: CMakeLists.txt  Makefile
F7_HAL_Lib_Project/User/Inc/: main.h
F7_HAL_Lib_Project/User/Src/: main.cpp  stm32f7xx_hal_msp.c
F7_HAL_Lib_Project/User/Src/device/Inc/: led.h
F7_HAL_Lib_Project/User/Src/device/Src/: led.cpp
